environments/dev/apps/app-Go-Server/services/Go-Server/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: Go-Server
    app.kubernetes.io/part-of: app-Go-Server
  name: Go-Server
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: Go-Server
    app.kubernetes.io/part-of: app-Go-Server
status:
  loadBalancer: {}
