environments/dev/apps/app-Go-Server/services/Go-Server/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: Go-Server
  namespace: dev
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: Go-Server
    weight: 100
  wildcardPolicy: None
